--- a/index.html
+++ b/index.html
@@ -142,6 +142,37 @@
     <button class="btn-2"><a href="https://github.com/ZubairrBabar/ToDo-list-filter-function">View Code</a></button>
     </div>
     </div> 
+
+    <div class="box">
+    <div class="Text-heading">
+    <h1>Weather-App</h1>
+    </div>
+    <div class="btn">
+    <button class="btn-1"><a href="https://6687e083b074e94cbaf6f5bc--gilded-douhua-bb030b.netlify.app/">View</a></button>
+    <button class="btn-2"><a href="https://github.com/ZubairrBabar/Weather-App">View Code</a></button>
+    </div>
+    </div> 
+
+    <div class="box">
+    <div class="Text-heading">
+    <h1> Fire-Base SignUp/Sign-in </h1>
+    </div>
+    <div class="btn">
+    <button class="btn-1"><a href="https://668841fe445f1d69fda1490a--sweet-centaur-88f592.netlify.app/">View</a></button>
+    <button class="btn-2"><a href="https://github.com/ZubairrBabar/FirseBase-SignUp--SignIn-">View Code</a></button>
+    </div>
+    </div>
+    
+    
+    <div class="box">
+    <div class="Text-heading">
+    <h1> Fire-Base Todos list App </h1>
+    </div>
+    <div class="btn">
+    <button class="btn-1"><a href="https://668838e004e1c1b245941855--majestic-truffle-900126.netlify.app/">View</a></button>
+    <button class="btn-2"><a href="https://github.com/ZubairrBabar/FireBase-Todos-list-Application">View Code</a></button>
+    </div>
+    </div> 
    
   
 
